--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-toastify": "^5.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SSL_CRT_FILE=./.cert/cert.pem SSL_KEY_FILE=./.cert/key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
