--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "react-google-login": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-toastify": "^5.5.0"
+    "react-toastify": "^5.5.0",
+    "reactjs-popup": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SSL_CRT_FILE=./.cert/cert.pem SSL_KEY_FILE=./.cert/key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
