--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-toastify": "^5.5.0"
   },
   "scripts": {
-    "start": "node server.ts",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
