--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ REACT_APP_API_URL=https://vast-brook-23767.herokuapp.com
 REACT_APP_GOOGLE_CLIENT=265036509630-ul2nu4t1deh8g6pdifus9mcbtgcbqi2c.apps.googleusercontent.com
 REACT_APP_FACEBOOK_CLIENT=209791674023812
 
-#HTTPS=true
+HTTPS=true
+REACT_EDITOR=atom
 #REACT_APP_API_URL=http://localhost:5000
